[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
search = 'my_history.cli:query'

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
